--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "api-nodeJS-mongo",
-  "version": "1.0.0",
-  "description": "API desenvolvida em Node.js + MongoDB",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cortelucas/api-nodeJS-mongo.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cortelucas/api-nodeJS-mongo/issues"
-  },
-  "homepage": "https://github.com/cortelucas/api-nodeJS-mongo#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.11.13"
-  }
+    "name": "api-nodeJS-mongo",
+    "version": "1.0.0",
+    "description": "API desenvolvida em Node.js + MongoDB",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon src/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/cortelucas/api-nodeJS-mongo.git"
+    },
+    "keywords": [],
+    "author": "Lucas Corte",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/cortelucas/api-nodeJS-mongo/issues"
+    },
+    "homepage": "https://github.com/cortelucas/api-nodeJS-mongo#readme",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.11.13",
+        "nodemon": "^2.0.7"
+    }
 }
