--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "api-nodeJS-mongo",
+    "name": "node-rest",
     "version": "1.0.0",
     "description": "API desenvolvida em Node.js + MongoDB",
     "main": "index.js",
@@ -22,6 +22,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.13",
         "nodemon": "^2.0.7"
     }
