--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "fs": "^0.0.1-security",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.13",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "path": "^0.12.7"
     }
 }
